Switch to browser-sync because it's easier

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <header></header>
-        <main></main>
+        <main>
+            <h1>Heading 1</h1>
+            <h2>Heading 2</h2>
+        </main>
         <footer></footer>
     </body>
 </html>
