Spell out CEPR acronym

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                                     thirds of black college grads. (<a
                                         href="http://cepr.net/documents/black-coll-grads-2014-05.pdf"
                                         target="_blank"
-                                        >CEPR</a
+                                        >Center for Economic and Policy Research<span class="sr-only"> (PDF, opens in a new browser tab)</span></a
                                     >)
                                 </p>
                                 <p>
